@@ -1,3 +1,4 @@
+* BUG#6458 Fix payments calculation after increment insertion
 * BUG#6398 Order loan shares by loan number in contract view form
 
 Version 1.12 - 2017-04-28
